# hyper-py

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: Hyper-py_paper.yml  pypi-publish.yml
IDL_comparison/: Gaussian_comparison_Hyper_py_IDL_ALL.py
paper/: Hyper-py_paper.md  Hyper_py.bib  paper.md
src/hyper_py/: __init__.py  bkg_multigauss.py  bkg_no_sources.py  bkg_single.py  cli.py  config.py  config.yaml  create_background_slices.py  data_output.py  detection.py  extract_cubes.py  fitting.py  gaussfit.py  groups.py  hyper.py  map_io.py  paths_io.py  photometry.py  run_hyper.py  separated_background.py  separated_background_single_sources.py  single_map.py  start_hyper.py  survey.py  visualization.py  ~$per-py_paper.md.docx
src/hyper_py/Milena_test/: test_datacube.yaml
src/hyper_py/Milena_test/Maps/: 52831_H2CO_cut_001_Jypxl.fits  53795_H2CO_cut_016_Jypxl.fits  datacube.txt
src/hyper_py/Milena_test/output/params/: params_52831_H2CO_cut_001_Jypxl_ALL.csv  params_52831_H2CO_cut_001_Jypxl_ALL.txt  params_52831_H2CO_cut_001_Jypxl_ALL_temp.txt  params_52831_H2CO_cut_001_Jypxl_slice_001.csv  params_52831_H2CO_cut_001_Jypxl_slice_001.txt  params_52831_H2CO_cut_001_Jypxl_slice_002.csv  params_52831_H2CO_cut_001_Jypxl_slice_002.txt  params_52831_H2CO_cut_001_Jypxl_slice_003.csv  (+145 more)
src/hyper_py/assets/: default_config.yaml
test/: map_500_Gaussians_2.fits  test_hyper.py
test/maps/: map_500_Gaussians_1.fits  test_2d_map_1.fits  test_2d_map_2.fits  test_2dmap.txt  test_datacube.fits  test_datacube.txt
(+184 files in other folders)
